Create barchart with text label
[#170464680]

--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
 </header>
 
 <body>
-    Hello world
-    <p>para 1</p>
-    <p>para 2</p>
-    <p>para 3</p>
+    <svg class='bar-chart'></svg>
 
     <script src='./js/tutorial.js'></script>
 </body>
