--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 </header>
 
 <body>
-    <svg class='bar-chart'></svg>
+    <h1>Bar Chart using D3.js</h1>
+
+    <svg></svg>
 
     <script src='./js/tutorial.js'></script>
 </body>
