Draw x axis with time
[#170464680]

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
 <header>
     <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <link rel="stylesheet" href='css/index.css'>
     <title>Simple D3.js</title>
 </header>
 
 <body>
-    <h1>Bar Chart using D3.js</h1>
+    <h1>Goal Setting</h1>
 
     <svg></svg>
 
