Show force simulation graph
[#170464680]

--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <header>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <link rel="stylesheet" href='css/index.css'>
     <title>Simple D3.js</title>
 </header>
 
 <body>
     <h1>Goal Setting</h1>
 
-    <svg></svg>
+    <div id="my_axis"></div>
+    <div id="my_dataviz"></div>
 
     <script src='./js/tutorial.js'></script>
+    <script src='./js/force.simulation.js'></script>
 </body>
 
 </html>
